--- a/files/url-pc.html
+++ b/files/url-pc.html
@@ -2,17 +2,7 @@
 <html>
    <body>
       <script>
-	  function iniFrame() {
-	  if ( window.location !== window.parent.location )
-	  {
-	  var url= "https://xalexi7.wix.com/catsflix";
-	  window.location = url
-	  }
-      else {
-	  var xurl= "https://www.alex-i7.cf/catsflix/files/error";
-	  window.location = xurl
-	  }} 
-	  iniFrame();
+	  var _0xd1ee=["\x6C\x6F\x63\x61\x74\x69\x6F\x6E","\x70\x61\x72\x65\x6E\x74","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x78\x61\x6C\x65\x78\x69\x37\x2E\x77\x69\x78\x2E\x63\x6F\x6D\x2F\x63\x61\x74\x73\x66\x6C\x69\x78","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x77\x77\x77\x2E\x61\x6C\x65\x78\x2D\x69\x37\x2E\x63\x66\x2F\x63\x61\x74\x73\x66\x6C\x69\x78\x2F\x66\x69\x6C\x65\x73\x2F\x65\x72\x72\x6F\x72"];function iniFrame(){if(window[_0xd1ee[0]]!== window[_0xd1ee[1]][_0xd1ee[0]]){var _0x6df8x2=_0xd1ee[2];window[_0xd1ee[0]]= _0x6df8x2}else {var _0x6df8x3=_0xd1ee[3];window[_0xd1ee[0]]= _0x6df8x3}}iniFrame()
 	  </script> 
    </body>
 </html>
