--- a/hls/legacies.html
+++ b/hls/legacies.html
@@ -5,7 +5,7 @@
 <video id="video"></video>
 <script>
   var video = document.getElementById('video');
-  var videoSrc = 'https://3aa37dc0e8bb47e08042e0ebb25acb34.dlvr1.net/nosec/The_CW/762/477/111393861897/Legacies-311-YouCantRunFromWhoYouAre-T46.10311-CW.m3u8';
+  var videoSrc = 'https://3aa37dc0e8bb47e08042e0ebb25acb34.dlvr1.net/nosec/The_CW/144/733/111819845741/Legacies-312-IWasMadeToLoveYou-T4610312-CW.m3u8';
   video.controls = true;
   video.width = "959";
   video.height = "537";
