--- a/hls/titans/s1e10.html
+++ b/hls/titans/s1e10.html
@@ -1,8 +1,1 @@
-<!DOCTYPE html>
-<html>
-   <body>
-      <video width="959" height="537" controls>
-         <source src="https://www.googleapis.com/drive/v3/files/153cG1CI9ZHy-XO0yk8uWsrKA5WYuXWeK?alt=media&key=AIzaSyDgrKYcmtdzpUMpmRMfyokYdlOrHjsg0Ig" type="video/mp4">
-      </video>
-   </body>
-</html>
+<html><head><meta name="viewport" content="width=device-width"><style>body {background-color: rgb(0, 0, 0);}video {position: absolute;top: 0px;right: 0px;bottom: 0px;left: 0px;max-height: 100%;max-width: 100%;margin: auto;}</style></head><body><video controls="" autoplay="" name="media"><source src="https://www.dropbox.com/s/l5lpjv8ixn5g8e7/TI.S01E10.mp4?dl=1"></video></body></html>
