--- a/hls/titans/s1e8.html
+++ b/hls/titans/s1e8.html
@@ -1,1 +1,25 @@
-<html><head><meta name="viewport" content="width=device-width"><style>body {background-color: rgb(0, 0, 0);}video {position: absolute;top: 0px;right: 0px;bottom: 0px;left: 0px;max-height: 100%;max-width: 100%;margin: auto;}</style></head><body><video controls="" autoplay="" name="media"><source src="https://www.dropbox.com/s/n99mx8tuqrycsvs/TI.S01E08.mp4?raw=1"></video></body></html>
+<html>
+
+<head>
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.6.8/plyr.css" />
+    <style>
+        :root {
+            --plyr-color-main: red;
+        }
+    </style>
+</head>
+
+<body>
+    <video id="player" controls data-poster="https://www.themoviedb.org/t/p/original/bf1zdS49ulAvXyhvkTPOiIbE9q1.jpg">
+        <source src="https://www.dropbox.com/s/n99mx8tuqrycsvs/TI.S01E08.mp4?raw=1" type="video/mp4" />
+    </video>
+    <script src="https://cdn.plyr.io/3.6.8/plyr.polyfilled.js"></script>
+    <script>
+        const player = new Plyr('#player', {
+            controls: ['play-large', 'play', 'progress', 'current-time', 'duration', 'mute', 'volume', 'fullscreen'],
+            ratio: '16:9'
+        });
+    </script>
+</body>
+
+</html>
