--- a/hls/mv/aiw.html
+++ b/hls/mv/aiw.html
@@ -12,7 +12,7 @@
 
 <body>
     <video id="player" controls data-poster="https://www.themoviedb.org/t/p/original/lmZFxXgJE3vgrciwuDib0N8CfQo.jpg">
-        <source src="https://www.dropbox.com/s/d7g9hrtydpg4kgt/AIW.18.mp4?dl=0" type="video/mp4" />
+        <source src="https://www.dropbox.com/s/d7g9hrtydpg4kgt/AIW.18.mp4?raw=1" type="video/mp4" />
     </video>
     <script src="https://cdn.plyr.io/3.6.8/plyr.polyfilled.js"></script>
     <script>
